<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sandeep</groupId>
    <artifactId>api-automation-framework</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <logback.version>1.5.18</logback.version>
        <slf4j.version>2.0.17</slf4j.version>
        <restassured.version>5.5.1</restassured.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <env.dev>dev</env.dev>
        <env.qa>qa</env.qa>
        <surefire.version>3.5.3</surefire.version>
        <java.version>17</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8</artifactId>
            <version>2.35.2</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${restassured.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.10.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports-cucumber4-adapter</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>5.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports-testng-adapter</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>au.com.dius.pact</groupId>
            <artifactId>consumer</artifactId>
            <version>4.6.17</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>dev_int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <env>${env.dev}</env>
                                <pact.rootDir>src/test/resources/pacts</pact.rootDir>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>qa_int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <env>${env.qa}</env>
                                <pact.rootDir>./src/test/resources/pacts</pact.rootDir>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!--<profile>
            <id>qa_bdd</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${surefire.version}</version>
                        <configuration>
                            &lt;!&ndash;<parallel>methods</parallel>
                            <threadCount>3</threadCount>
                            <perCoreThreadCount>false</perCoreThreadCount>
                            <properties>
                                <property>
                                    <name>dataproviderthreadcount</name>
                                    <value>3</value>
                                </property>
                            </properties>&ndash;&gt;
                            <systemPropertyVariables>
                                &lt;!&ndash; need to provide user, userpass & cucumber.options for tags while calling maven &ndash;&gt;
                                <env>${env.qa}</env>
                                <browser>${browser}</browser>
                                <driverType>${driverType}</driverType>
                                <headless>${headless}</headless>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>./src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>-->
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
